k8s/apps/forgejo/anubis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anubis
  labels:
    app: anubis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: anubis
  template:
    metadata:
      labels:
        app: anubis
    spec:
      containers:
        - name: anubis
          image: ghcr.io/techarohq/anubis:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 750m
              memory: 256Mi
            requests:
              cpu: 250m
              memory: 256Mi
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault

---
apiVersion: v1
kind: Service
metadata:
  name: anubis
spec:
  selector:
    app: anubis
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: anubis
