k8s/apps/forgejo/forgejo-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - git.scarey.me
  rules:
    - backendRefs:
        - name: anubis
          port: 8080
